# NewsCatch

./: Parser.py  Scrapper.py  inews_co_uk.json  pyproject.toml  rpt_pt.json  rtbf_be.json  svt_se.json
